--- a/src/views/rows/RowsPage.module.css
+++ b/src/views/rows/RowsPage.module.css
@@ -1,5 +1,6 @@
 .page {
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   background: var(--base);
